April 26 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Equipment menu works somehow.

April 25 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added new action system
	* Added Stack sorting
	* Remade dig & some other action systems
	* Consume system temporarily disabled
	* Some bugs corrected and many added

2002-25-25  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* charde.cpp: Added CheckKick(), GetLengthOfOpen(), CheckApply(), CheckOffer() to humanoid also added GetArms(), GetLegs() and GetAPMultiplier()
	* charba.cpp: Added the above checks + relevant calls.
	* charde.h: (added functions) and tweaked some colors
	* charba.cpp: added functions

April 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* charde.cpp/h: Petrus's "temporary" AddHitMessage finally removed
	* felist.cpp: List order bug corrected

April 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* felist.cpp/h: Added AddEntryToPos
	* message.cpp: Messages are now split correctly

2002-04-22  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* AUTHORS: Fixed a small typo
	
2002-04-22  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* charde.h: Tweaked bitmap positions and colors for Oree, goblin, skeleton, imp, gibberling, kobold, enner beast and dark knight

April 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* felist.cpp/h & files with felist calls: Added more parameters (pos and width etc.) for felits
	* hscore.cpp: HScore draw uses felist now

April 21 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* All libraries united

April 21 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* bitmap.cpp/h, colorbit.cpp, graphics.cpp: Subbitmap support added
	* colorbit.cpp/h, graphics.cpp: Text shading added
	* felist.cpp/h: Added felist support for pictures, entry categories and arrow key selection
	* hscore.cpp & all files with felist calls: List colors are now more consistent
	* charba.cpp: Added icons for pray menu