@@ -41,7 +41,7 @@ imp		100	15	10	10	15	20000		40000
 kobold		90	10	5	5	12	2000		30000
 large cat	60	25	5	5	21	20000		15000
 large rat	30	10	3	2	12	20000		2000
-lion		300							150000
+lion		300	40	30	30	24	3000		150000
 mammoth		500	20	80	80	18	5000		5000000
 raven		60
 unicorn		200	40	5	20	18	2500		200000
@@ -53,3 +53,5 @@ orc		160							50000
 troll		230							200000
 ant		1	1	1	1	1	1		1
 kamikazedwarf	130	20	20	20	24	2000		60000
+carnivorouspl.	250	5	30	4	5	2500		20000
+buffalo		250	7	4	30	24	500		200000
