@@ -1287,7 +1287,6 @@ class CHARACTER
  public:
   virtual uchar GetSex() const { return UNDEFINED; }
  protected:
-  //  virtual ushort HairColor() const { return MAKE_RGB(60, 48, 24); }
   virtual ushort SkinColor() const { return MAKE_RGB(128, 0, 0); }
   virtual ushort EyeColor() const { return MAKE_RGB(150, 80, 0); }
   virtual ushort ClothColor() const { return MAKE_RGB(111,74,37); }
@@ -1419,7 +1418,7 @@ class CHARACTER
   virtual bool CanBeGenerated() const { return true; }
   virtual void CreateInitialEquipment();
  protected:
-  virtual ushort SkinColor() const { return MAKE_RGB(40, 140, 150); }
+  virtual ushort SkinColor() const { return MAKE_RGB(30, 100, 110); }
   virtual ushort HairColor() const { return MAKE_RGB(35, 35, 35); }
   virtual ushort ClothColor() const { return MAKE_RGB(111, 74, 37); }
   virtual vector2d GetHeadBitmapPos() const { return vector2d(112, 208); }
@@ -1670,5 +1669,81 @@ class CHARACTER
   virtual ushort TotalSize() const { return 250; }
 );
 
+class CHARACTER
+(
+  lion,
+  character,
+  {
+    SetAgility(40);
+    SetStrength(30);
+    SetEndurance(30);
+    SetPerception(24);
+  },
+ protected:
+  virtual ulong TotalVolume() const { return 150000; }
+  virtual material* CreateTorsoFlesh(ulong Volume) const { return new lionflesh(Volume); }
+  virtual std::string DeathMessage() { return Name(DEFINITE) + " growls."; }
+  virtual vector2d GetBitmapPos() const { return vector2d(576,0); }
+  virtual std::string NameSingular() const { return "lion"; }
+  virtual std::string ThirdPersonMeleeHitVerb(bool Critical) const { return ThirdPersonBiteVerb(Critical); }
+  virtual std::string FirstPersonHitVerb(character*, bool Critical) const { return FirstPersonBiteVerb(Critical); }
+  virtual std::string AICombatHitVerb(character*, bool Critical) const { return ThirdPersonBiteVerb(Critical); }
+  virtual float GetMeleeStrength() const { return 3000; }
+  virtual std::string TalkVerb() const { return "growls"; }
+  virtual ushort TotalSize() const { return 200; }
+);
+
+class CHARACTER
+(
+  carnivorousplant,
+  character,
+  {
+    SetAgility(5);
+    SetStrength(30);
+    SetEndurance(4);
+    SetPerception(5);
+    //GetTorso()->UpdatePicture();
+  },
+ protected:
+  virtual ulong TotalVolume() const { return 20000; }
+  virtual material* CreateTorsoFlesh(ulong Volume) const { return new leaf(Volume); }
+  virtual std::string DeathMessage() { return Name(DEFINITE) + " howls."; }
+  virtual vector2d GetBitmapPos() const { return vector2d(0,16); }
+  virtual std::string NameSingular() const { return "carnivorous plant"; }
+  virtual std::string ThirdPersonMeleeHitVerb(bool Critical) const { return ThirdPersonBiteVerb(Critical); }
+  virtual std::string FirstPersonHitVerb(character*, bool Critical) const { return FirstPersonBiteVerb(Critical); }
+  virtual std::string AICombatHitVerb(character*, bool Critical) const { return ThirdPersonBiteVerb(Critical); }
+  virtual float GetMeleeStrength() const { return 2500; }
+  virtual std::string TalkVerb() const { return "is silent"; }
+  virtual ushort TotalSize() const { return 250; }
+  //  virtual ushort GetMaterialColor1() const { return GetColor(); }
+  virtual void GetAICommand();
+  virtual void CreateTorso();
+);
+
+
+class CHARACTER
+(
+  buffalo,
+  character,
+  {
+    SetAgility(4);
+    SetStrength(3);
+    SetEndurance(30);
+    SetPerception(24);
+  },
+ protected:
+  virtual ulong TotalVolume() const { return 200000; }
+  virtual material* CreateTorsoFlesh(ulong Volume) const { return new buffaloflesh(Volume); }
+  virtual std::string DeathMessage() { return Name(DEFINITE) + " snarls one last time."; }
+  virtual vector2d GetBitmapPos() const { return vector2d(16,16); }
+  virtual std::string NameSingular() const { return "buffalo"; }
+  virtual std::string ThirdPersonMeleeHitVerb(bool Critical) const { return ThirdPersonBiteVerb(Critical); }
+  virtual std::string FirstPersonHitVerb(character*, bool Critical) const { return FirstPersonBiteVerb(Critical); }
+  virtual std::string AICombatHitVerb(character*, bool Critical) const { return ThirdPersonBiteVerb(Critical); }
+  virtual float GetMeleeStrength() const { return 500; }
+  virtual std::string TalkVerb() const { return "snarls"; }
+  virtual ushort TotalSize() const { return 250; }
+);
 #endif
 
